--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,12 @@ pandas==1.5.1
 pandas-ta==0.3.14b
 
 ccxt==2.1.75
+
+ta==0.7.0
+pandas_ta
+gym
+tensorflow
+keras-rl2==1.0.5
 # Pin cryptography for now due to rust build errors with piwheels
 cryptography==38.0.1; platform_machine == 'armv7l'
 cryptography==38.0.3; platform_machine != 'armv7l'
